--- a/Aula04set.ipynb
+++ b/Aula04set.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0qyMC/1K5xom0wtRiXn0Y",
+      "authorship_tag": "ABX9TyO6RzbO0rzGQ/MRa8XpsKpV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**EX.05 - Aula 04**"
+        "**EX.05 - Aula LP)**"
       ],
       "metadata": {
         "id": "nvg_5o1KLOrb"
