--- a/Aula04set.ipynb
+++ b/Aula04set.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6RzbO0rzGQ/MRa8XpsKpV",
+      "authorship_tag": "ABX9TyO75qv346K/qHi8OWWDavGE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,86 @@
           "text": [
             "Digite valor em polegadas: 2\n",
             "50.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EX5\n",
+        "\n",
+        "\n",
+        "```\n",
+        "# Isto está formatado como código\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2bi6oUBER1qP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# vou solicitar inicialamente o raio\n",
+        "raio = float(input(\"Digite raio\"))\n",
+        "3*raio"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wvn0Kv-hR7aY",
+        "outputId": "6ce50997-832d-4d44-a60b-d4c5f34ab3c8"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite raio2\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import pi\n",
+        "#vou solicitar inicialmente o raio\n",
+        "print (\"programa para calcular volume da esfera!\")\n",
+        "raio = float(input(\"Digite raio:\"))\n",
+        "v = (4/3) * pi * (raio**3)\n",
+        "print(\"volume da esfera = \",v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "plYC2xjvS40f",
+        "outputId": "66a95953-0cc2-49c1-c3b1-8900b09e50cb"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "programa para calcular volume da esfera!\n",
+            "Digite raio:3\n",
+            "volume da esfera =  113.09733552923254\n"
           ]
         }
       ]
