--- a/Olá,_este_é_o_Colaboratory.ipynb
+++ b/Olá,_este_é_o_Colaboratory.ipynb
@@ -381,11 +381,11 @@
         "# Fim do programa"
       ],
       "metadata": {
-        "id": "tGbZMITXXzh1",
-        "outputId": "23be854c-7bac-4de6-c6a0-6698655c03ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tGbZMITXXzh1",
+        "outputId": "23be854c-7bac-4de6-c6a0-6698655c03ce"
       },
       "execution_count": 1,
       "outputs": [
@@ -425,11 +425,11 @@
         "# Fim do programa"
       ],
       "metadata": {
-        "id": "xZKwwKa4YO-g",
-        "outputId": "84d68cde-2c2e-4511-e2b8-083c1aa1a41f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xZKwwKa4YO-g",
+        "outputId": "84d68cde-2c2e-4511-e2b8-083c1aa1a41f"
       },
       "execution_count": 2,
       "outputs": [
@@ -440,6 +440,48 @@
             "Digite a nota a (peso 2): 7\n",
             "Digite a nota b (peso 3): 4\n",
             "Média ponderada: 5.20 - Status: Aprovado\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Início\n",
+        "# Leia os três valores: a, b e c\n",
+        "a = float(input(\"Digite o valor de a: \"))\n",
+        "b = float(input(\"Digite o valor de b: \"))\n",
+        "c = float(input(\"Digite o valor de c: \"))\n",
+        "\n",
+        "# Compare os valores\n",
+        "if a <= b and a <= c:\n",
+        "    menor = a  # a é o menor valor\n",
+        "elif b <= a and b <= c:\n",
+        "    menor = b  # b é o menor valor\n",
+        "else:\n",
+        "    menor = c  # c é o menor valor\n",
+        "\n",
+        "# Exiba o menor valor\n",
+        "print(\"O menor valor é:\", menor)\n",
+        "# Fim"
+      ],
+      "metadata": {
+        "id": "lS4jBKcdZXlo",
+        "outputId": "6bd2e620-60a9-46bb-f184-a71cab65f4d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor de a: 5\n",
+            "Digite o valor de b: 8\n",
+            "Digite o valor de c: 9\n",
+            "O menor valor é: 5.0\n"
           ]
         }
       ]
